15-ingress-container-native-lb/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: neg-demo-app # Label for the Deployment
  name: neg-demo-app # Name of Deployment
  namespace: doit-lab-15
spec:
  selector:
    matchLabels:
      run: neg-demo-app
  template: # Pod template
    metadata:
      labels:
        run: neg-demo-app # Labels Pods from this Deployment
    spec: # Pod specification; each Pod created by this Deployment has this specification
      containers:
        - image: k8s.gcr.io/serve_hostname:v1.4 # Application to run in Deployment's Pods
          name: hostname # Container name
          ports:
            - containerPort: 9376
              protocol: TCP
