15-ingress-container-native-lb/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neg-demo-svc # Name of Service
  namespace: doit-lab-15
  annotations:
    # NEG is the default under certain conditions and does not need to be enabled explicitly
    # https://cloud.google.com/kubernetes-engine/docs/concepts/ingress#container-native_load_balancing
    cloud.google.com/neg: '{"ingress": true}' # Creates a NEG after an Ingress is created
spec: # Service's specification
  type: ClusterIP
  selector:
    run: neg-demo-app # Selects Pods labelled run: neg-demo-app
  ports:
    - name: http
      port: 80 # Service's port
      protocol: TCP
      targetPort: 9376
